...
                                            <rect key="frame" x="0.0" y="0.0" width="600" height="58.5"/>
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="addProduct" translatesAutoresizingMaskIntoConstraints="NO" id="kyn-K0-v5f">
                                                    <rect key="frame" x="14" y="10" width="40" height="40"/>
                                                </imageView>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Shopping List" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kE3-VV-p3B">
                                                    <rect key="frame" x="62" y="18" width="179" height="23"/>
                                                    <fontDescription key="fontDescription" style="UICTFontTextStyleTitle3"/>
                                                    <color key="textColor" red="1" green="0.80000001190000003" blue="0.40000000600000002" alpha="1" colorSpace="calibratedRGB"/>
                                                    <nil key="highlightedColor"/>
                                                </label>
                                            </subviews>
...
                                        <rect key="frame" x="0.0" y="197" width="600" height="59"/>
                                        <autoresizingMask key="autoresizingMask"/>
                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="m15-vL-rqK" id="Ic0-C9-2rM">
                                            <rect key="frame" x="0.0" y="0.0" width="600" height="58.5"/>
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Cupon" translatesAutoresizingMaskIntoConstraints="NO" id="QOj-n4-hPE">
                                                    <rect key="frame" x="16" y="8" width="40" height="40"/>
                                                </imageView>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Cupons" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jmD-l3-Ke4">
                                                    <rect key="frame" x="64" y="19" width="73" height="21"/>
                                                    <fontDescription key="fontDescription" style="UICTFontTextStyleTitle3"/>
                                                    <color key="textColor" red="1" green="0.43529412150000002" blue="0.81176471709999998" alpha="1" colorSpace="calibratedRGB"/>
...
                    </tableView>
                    <toolbarItems>
                        <barButtonItem title="Item" id="zVS-Uv-TM7"/>
                        <barButtonItem title="Item" id="FaB-vL-OOn"/>
                    </toolbarItems>
                    <navigationItem key="navigationItem" id="jgr-Yf-x8Y">
                        <barButtonItem key="leftBarButtonItem" title="menu" id="f4C-AF-n8e"/>
                    </navigationItem>
                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                    <connections>
                        <outlet property="facebookProfileImg" destination="WNC-sC-ps6" id="T2H-4t-buO"/>
                        <outlet property="googleImage" destination="33b-u8-wcy" id="WZS-xu-7Im"/>
                        <outlet property="googleStackView" destination="5cx-uC-ryV" id="xXj-uy-EdX"/>
...
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XPe-yG-VT4">
                                <rect key="frame" x="225" y="139" width="35" height="30"/>
                                <state key="normal" title="Scan"/>
                                <connections>
                                    <action selector="scanProduct:" destination="hVW-5D-dGg" eventType="touchUpInside" id="U4G-IG-IZI"/>
                                </connections>
                            </button>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="tHE-3H-wPv">
                                <rect key="frame" x="154" y="87" width="176" height="30"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Nrd-jV-1S3">
                                <rect key="frame" x="225" y="183" width="39" height="30"/>
                                <state key="normal" title="Close"/>
                                <connections>
                                    <action selector="closeVC:" destination="hVW-5D-dGg" eventType="touchUpInside" id="gXa-I6-ogW"/>
                                </connections>
                            </button>
                        </subviews>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
...
