...
        alertController = UIAlertController(title: "Cupon", message: "Write the number of your cupon", preferredStyle: .Alert)
        
        let addCuponAction : UIAlertAction = UIAlertAction(title: "Submit", style: .Default, handler: { (UIAlertAction) in
            print("Submit cupon")
            self.searchForCupon(self.alertController.textFields![0].text!)
        })
        let cancelCuponAction : UIAlertAction = UIAlertAction(title: "Cancel", style: .Destructive, handler: { (UIAlertAction) in
            print("Cancel cupon")
        })
        alertController.addTextFieldWithConfigurationHandler(nil)
        alertController.addAction(addCuponAction)
        alertController.addAction(cancelCuponAction)
        
...
